--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
-    
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" href="assets/pics/app-icon.png">
@@ -27,7 +27,7 @@
                 <label for="searchString" class="hidden">Search</label>
                 <input type="search" id="searchString" class="search-input" name="searchString"
                 value="" placeholder="Search" required></input><!--
-                --><button type="submit" name="btnSubmit" class="btn btn-default btn-search">Search</button>
+                --><button type="submit" name="btnSubmit" class="btn-search">Search</button>
             </form>
         </div>
 
